brand-showを仮で修正

--- a/app/views/post_brands/index.html.haml
+++ b/app/views/post_brands/index.html.haml
@@ -4,6 +4,7 @@
     %h1 ブランド一覧
     - @post_brands.each do |post_brand|
       %p
+        -# = post_brand.name
         = link_to post_brand_path(post_brand.id) do
           = post_brand.name
 
