取引ページの半分とpriceにバリデーション追加

--- a/app/assets/stylesheets/modules/_top__header.scss
+++ b/app/assets/stylesheets/modules/_top__header.scss
@@ -46,7 +46,7 @@
             width: 18px;
             border: 0px;
             cursor: pointer;
-            background-color: #3CCACE;
+            background-color: #3ccace;
             padding: 8px;
             height: 18px;
           }
@@ -89,7 +89,7 @@
 
       &__right {
         // margin-left: auto;
-        // display: flex;
+        display: flex;
 
         &__login {
           display: flex;
