--- a/app/assets/stylesheets/modules/_transaction-rooms.scss
+++ b/app/assets/stylesheets/modules/_transaction-rooms.scss
@@ -2,22 +2,24 @@
   width: 70%;
   margin: 50px auto;
   display: flex;
-  .menu-title {
-    text-align: center;
-    font-size: 30px;
-    font-weight: bold;
-    padding: 16px;
-  }
   .left-menu {
     width: 30%;
-    background-color: white;
     margin-right: 50px;
-    border: 1px solid #ebebeb;
+    &-title {
+      text-align: center;
+      font-size: 19px;
+      font-weight: bold;
+    }
     .left-contents {
       width: 100%;
+      background-color: white;
+      border: 1px solid #ebebeb;
+      margin-bottom: 30px;
       & tr {
         display: flex;
-        border-top: 1px solid #f3f3f3;
+        &:not(:first-of-type) {
+          border-top: 1px solid #f3f3f3;
+        }
         & th {
           width: 35%;
           padding: 16px;
@@ -32,11 +34,92 @@
         }
       }
     }
+    .seller {
+      background-color: white;
+      border: 1px solid #ebebeb;
+      &-name {
+        font-size: 19px;
+        text-align: center;
+        line-height: 50px;
+      }
+    }
   }
 
   .right-menu {
     width: 70%;
     background-color: white;
     border: 1px solid #ebebeb;
+    &-title {
+      text-align: center;
+      font-size: 30px;
+      font-weight: bold;
+      padding: 16px;
+    }
+    .messages {
+      border-top: 1px solid #f3f3f3;
+      padding: 16px;
+      .message {
+        width: 100%;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        &-right {
+          &-name {
+            display: flex;
+            justify-content: flex-end;
+            color: $light_blue;
+          }
+          .right-content {
+            float: right;
+            background: $light_yellow;
+          }
+        }
+        &-left {
+          display: flex;
+          justify-content: flex-start;
+          &-name {
+            color: #333;
+          }
+        }
+        &-content {
+          width: 70%;
+          padding: 16px;
+          background: #eef0f4;
+          border-radius: 15px;
+          word-break: break-all;
+          .date {
+            font-size: 12px;
+            color: $light_gray;
+          }
+        }
+      }
+    }
+    .message-form {
+      padding: 20px;
+      .text-field {
+        width: 100%;
+        display: block;
+        min-height: 104px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+        margin-bottom: 15px;
+      }
+      .form-submit {
+        @include submit-btn($light_gray);
+      }
+    }
+    .review {
+      border-top: 1px solid #f3f3f3;
+      &-select {
+        margin: 30px 0;
+      }
+      &-form {
+        width: 50%;
+        margin: 0 auto;
+        .submit {
+          @include submit-btn($red);
+        }
+      }
+    }
   }
 }
