--- a/app/views/transaction_messages/_transaction_message.html.haml
+++ b/app/views/transaction_messages/_transaction_message.html.haml
@@ -1,8 +1,21 @@
-- if transaction_message.user.id == current_user.id
-  %div 投稿者(右)
-  = transaction_message.user.nickname
-  = transaction_message.content
-- else
-  %div 投稿者(左)
-  = transaction_message.user.nickname
-  = transaction_message.content
+%li.message
+  - if transaction_message.user.id == current_user.id
+    .clearfix
+      %ul.message-right
+        %li.message-right-name
+          = transaction_message.user.nickname
+        %li.message-content.right-content
+          = transaction_message.content
+          .date
+            = time_ago_in_words(transaction_message.created_at).upcase
+            前
+  - else
+    .message-left.clearfix
+      %ul
+        %li.message-left-name
+          = transaction_message.user.nickname
+        %li.message-content
+          = transaction_message.content
+          .date
+            = time_ago_in_words(transaction_message.created_at).upcase
+            前
