--- a/app/views/transaction_rooms/show.html.haml
+++ b/app/views/transaction_rooms/show.html.haml
@@ -2,8 +2,8 @@
   = render 'devise/shared/header'
   %main.transaction-rooms-show
     .left-menu
-      .menu-title
-        取引情報
+      .left-menu-title
+        商品情報
       %table.left-contents
         %tr
           %th
@@ -17,19 +17,14 @@
               = @post.price
         %tr
           %th
+            購入日
+          %td
+            = @transaction.created_at.strftime("%Y年%m月%d日")
+        %tr
+          %th
             送料
           %td
             = @post.delivery_status
-        %tr
-          %th
-            購入日
-          %td
-            = @post.created_at.strftime("%Y-%m-%d")
-        %tr
-          %th
-            商品番号
-          %td
-            = @post.id
         %tr
           %th
             お届け先
@@ -44,40 +39,41 @@
             = @address.apartment_first_name
             = @address.apartment_family_name
             様
+      .left-menu-title
+        出品者情報
+      .seller
+        .seller-name
+          = @post.user.nickname
 
 
     .right-menu
-      .menu-title
-        取引情報
+      .right-menu-title
+        取引画面
+      - if @transaction.acceptance == true
+        この取引は終了しています
+      %ul.messages
+        = render @messages
 
+      .message-form
+        = form_with(model: @message, local: true ) do |form|
+          = form.text_field :content, placeholder: "メッセージを入力して下さい", required: true, class: "text-field"
+          = form.hidden_field :transaction_room_id, value: @room.id
+          = form.submit class: "form-submit"
 
-
+      - if @transaction.acceptance == false
+        .review
+          .right-menu-title
+            商品の受取評価
+            = form_with(controller: 'transactions', action: 'acceptance', local: true, data: { confirm: '受け取り評価をしますか？ この操作は取り消せません' }) do |f|
+              .review-select
+                = f.label "良かった", for: "review_good"
+                = f.radio_button :review, :good, checked: true
+                = f.label "悪かった", for: "review_bad"
+                = f.radio_button :review, :bad
+              .review-form
+                = f.submit class: "submit", value: "販売者を評価する"
 
   = render 'devise/shared/footer'
--# %br/
--# - if @transaction.acceptance == true
--#   この取引は終了しています
 
--# %br/
--# 商品名【
--# = link_to @post.name, @post
--# 】
--# 紹介【
--# = @post.introduce
--# 】
--# %br/
--# ◎メッセージ
--# = render @messages
--# = form_with(model: @message, local: true ) do |form|
--#   = form.text_field :content, placeholder: "メッセージを入力して下さい", required: true
--#   = form.hidden_field :transaction_room_id, value: @room.id
--#   = form.submit
 
--# - if @transaction.acceptance == false
--#   = form_with(controller: 'transactions', action: 'acceptance', local: true, data: { confirm: '受け取り確認をしますか？ 確認後は取り消せません' }) do |f|
--#     = f.label "良い", for: "review_good"
--#     = f.radio_button :review, :good, checked: true
--#     = f.label "悪い", for: "review_bad"
--#     = f.radio_button :review, :bad
--#     = f.submit
 
